# kizuna

./: .gitignore  Cargo.toml  README.md  storage.json
.github/workflows/: main.yml  rust.yml
src/: cli.rs  contract.rs  main.rs  rpc.rs  storage.rs
