[package]
name = "kizuna-cli"
version = "0.2.0"
edition = "2021"


description = "A CLI tool for managing RPC URLs and interacting with smart contracts"
license = "MIT"
repository = "https://github.com/felixkamau/kizuna"


[dependencies]
alloy = { version = "0.9.2", features = ["full"] }
clap = "4.5.35"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
