[package]
name = "kizuna-cli"
version = "0.2.0"
edition = "2021"


description = "A CLI tool for managing RPC URLs and interacting with smart contracts"
license = "MIT"
repository = "https://github.com/felixkamau/kizuna"


[dependencies]
alloy = { version = "0.12.6", features = ["full"] }
clap = "4.5.45"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
